# gamelibs-libarchive

./: .gitignore  Makefile  configure.ac  meson.build
.github/workflows/: codeql.yml  scorecard.yml
libarchive/: archive_acl.c  archive_acl_private.h  archive_entry.c  archive_entry_locale.h  archive_hmac.c  archive_platform.h  archive_read_disk_posix.c  archive_read_open_fd.c  archive_read_open_file.c  archive_read_open_filename.c  archive_read_open_memory.c  archive_read_support_format_mtree.c  archive_read_support_format_zip.c  archive_string_composition.h  archive_windows.h  archive_write_open_fd.c  archive_write_open_file.c  archive_write_open_filename.c  archive_write_open_memory.c  archive_write_set_format_iso9660.c  config.h  config_linux.h  config_macosx.h  config_windows.h  libarchive.vcproj  libarchive.vcxproj  libarchive.vcxproj.filters
